--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "card_batch",
+  "name": "mock_cards",
   "version": "0.1.0",
   "description": "",
   "scripts": {
@@ -14,11 +14,13 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.0.1"
+    "styled-components": "^6.0.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "babel-preset-nano-react-app": "^0.1.0",
