feat: Saving restricted to save button instead of auto

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
+    "deploy": "firebase deploy --only hosting",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
     "typewatch": "tsc --noEmit --watch",
