--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   },
   "license": "MIT",
   "dependencies": {
+    "buffer": "^6.0.3",
+    "csv-parse": "^5.5.0",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "random-words": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,6 +26,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "@types/uuid": "^9.0.2",
